src/main/metadata-retrieve/objects/Car_Enquiry__c.object
<CustomObject>
    <description>Case: this object is used for Car Enquiry in Case Object.</description>
    <fields>
        <fullName>Car_Brand_Picklist__c</fullName>
        <description>Dependancy with car class</description>
        <label>Car Brand</label>
        <picklist>
            <picklistValues>
                <fullName>MB saloon car</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MB business car</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Maybach</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>smart</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Others</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AMG</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TRUCKS</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Car_Brand__c</fullName>
        <formula>IF( Car_Model__c &lt;&gt;null, TEXT( Car_Model__r.Brand__c ), CASE(Car_Series__c, &quot;Smart&quot;, &quot;Smart&quot;, &quot;AMG&quot;, &quot;AMG&quot;, &quot;MB&quot;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Car Brand(deleted)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Car_Model_Name__c</fullName>
        <formula>Car_Model__r.Name</formula>
        <label>Car Model Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Car_Model_Picklist__c</fullName>
        <description>Field dependancy with car series.</description>
        <label>Car Model</label>
        <picklist>
            <controllingField>Car_Series__c</controllingField>
            <picklistValues>
                <fullName>A160</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A180</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A 180 Hatchback</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A 200 Hatchback</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A 260 Hatchback</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>B200 Dynamic</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>B200</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>B200 BlueEFFICIENCY</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>B200 Avantgarde</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>B200 Luxury</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>B200 Luxury night special edition</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>C 200 Entry Elegance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>C 280 Avantgarde</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>C230 Avantgarde</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>C200 CGI Avantgarde</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>C200 CGI Elegance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>C280 Avantgarde</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>C200K Elegance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>C200K Avantgarde</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>C200K Sport (not current series)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>C260 Avantgarde</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>C200 Elegance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>C240E Elegance (not current series)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>C240A Avantgarde (not current series)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>C230 Elegance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>C280</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>C200K</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>C240 (not current series)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>C230</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>C260 CGI Avantgarde (CKD)</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Car_Model__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Car Model(Lookup)</label>
        <referenceTo>Car_Model__c</referenceTo>
        <relationshipLabel>Car Enquiry</relationshipLabel>
        <relationshipName>Car_Enquiry</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Car_Series__c</fullName>
        <label>Car Class</label>
        <picklist>
            <controllingField>Car_Brand_Picklist__c</controllingField>
            <picklistValues>
                <fullName>A-CLASS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>B-CLASS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>C-CLASS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>C-Class Estate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>C-Coupe</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CL-CLASS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CLK-CLASS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CLS-CLASS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>E-CLASS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>E Coupe Sport</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>E-Class Cabriolet</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>G-CLASS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GL-CLASS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GLK-CLASS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ML-CLASS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>R-CLASS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>S-CLASS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SL-CLASS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SLK-CLASS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Concept Car</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MB100 (not current series)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SPRINTER</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>VIANO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>VITO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>VARIO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MARCO POLO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MAYBACH</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>smart</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Others</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>G65 AMG</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Case_Number__c</fullName>
        <label>Case Number</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Car Enquiry</relationshipLabel>
        <relationshipName>Car_Enquiry</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <label>Car Enquiry</label>
    <nameField>
        <displayFormat>CarEnq-{00000000}</displayFormat>
        <label>Car Enquiry Number</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>